--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
         <footer>
           <p class="text-center">
             Coded with <span class="heart-emoji">❤ </span>by
-            <strong> Alejandro Sobko</strong>.
+            <strong> Augmento</strong>.
           </p>
         </footer>
       </div>
